<resources>
    <string name="app_name">电力巡检</string>
    <string name="action_settings">Settings</string>
    <string name="map_mode_vector">矢量地图</string>
    <string name="map_mode_2.5">2.5维地图</string>
    <string name="map_mode_raster">影像地图</string>
    <string name="unlogin">未登录</string>
    <string name="name">姓名</string>
    <string name="clear_cache">清空缓存</string>
    <string name="total">共</string>
    <string name="page">页</string>
    <string name="current_page">当前页:</string>
    <string name="match_result_count">匹配结果个数:</string>
    <string name="zero">0</string>
    <string name="search_fragment_hint">请输入关键字</string>
    <string name="gotohere">到这里去</string>
    <string name="showonmap">在地图上显示</string>
    <string name="download">下载</string>
    <string name="ftp_user">账号&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="default_user">anonymous</string>
    <string name="ftp_password">密码&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="default_password">ftp4j</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="hide">隐藏</string>
    <string name="remark">备注</string>
    <string name="descripbion">巡检记录说明</string>
    <string name="save">保存</string>
    <string name="ok">确定</string>
    <string name="name_prompt">名称</string>
    <string name="type_prompt">部件类型</string>
    <string-array name="dl_model">
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-8.7/15-3*35</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-8.7/15-3*50</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-8.7/15-3*70</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-8.7/15-3*95</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-8.7/15-3*120</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-8.7/15-3*150</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-8.7/15-3*185</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-8.7/15-3*240</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-8.7/15-3*300</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-8.7/15-3*400</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-8.7/15-3*500</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJLV22-8.7/15-3*35</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJLV22-8.7/15-3*50</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJLV22-8.7/15-3*70</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJLV22-8.7/15-3*95</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJLV22-8.7/15-3*185</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJLV22-8.7/15-3*240</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJLV22-8.7/15-3*300</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJLV22-8.7/15-3*400</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJLV22-8.7/15-3*500</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-18/20-3*120</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-18/20-3*150</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-18/20-3*240</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-18/20-3*500</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-12/20-3*120</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-18/20-3*400</item>
        <item>铝芯&#160;&#160;&#160;&#160;&#160;&#160;YJLV22-18/30-3*300</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-8.7/15-3*35</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-8.7/15-3*50</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-8.7/15-3*70</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-8.7/15-3*95</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-8.7/15-3*120</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-8.7/15-3*150</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-8.7/15-3*185</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-8.7/15-3*240</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-8.7/15-3*300</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-8.7/15-3*400</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-8.7/15-3*500</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJV22-8.7/15-3*35</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJV22-8.7/15-3*50</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJV22-8.7/15-3*70</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJV22-8.7/15-3*95</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJV22-8.7/15-3*185</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJV22-8.7/15-3*240</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJV22-8.7/15-3*300</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJV22-8.7/15-3*400</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;ZR-YJV22-8.7/15-3*500</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-18/20-3*120</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-18/20-3*240</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-18/20-3*300</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-18/20-3*400</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-18/30-3*70</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;ZC-YJV22-8.7/15-3*70</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;ZC-YJV22-8.7/15-3*185</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;ZC-YJV22-8.7/15-3*300</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;ZC-YJV22-8.7/15-3*400</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-12/20-3*70</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-18/20-3*70</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-12/20-3*185</item>
        <item>铜芯&#160;&#160;&#160;&#160;&#160;&#160;YJV22-10-3*240</item>
        <item>其他&#160;&#160;&#160;&#160;&#160;&#160;VV-8.7/15-3*70</item>
        <item>其他&#160;&#160;&#160;&#160;&#160;&#160;VV-8.7/15-3*35</item>
        <item>其他&#160;&#160;&#160;&#160;&#160;&#160;YJQ41G-8.7/15-3*120</item>
        <item>其他&#160;&#160;&#160;&#160;&#160;&#160;ZB-YJV32-Z-10-3*35</item>
        <item>其他&#160;&#160;&#160;&#160;&#160;&#160;ZB-YJV32-Z-10-3*50</item>
        <item>其他&#160;&#160;&#160;&#160;&#160;&#160;ZB-YJV32-Z-10-3*70</item>
        <item>其他&#160;&#160;&#160;&#160;&#160;&#160;ZB-YJV32-Z-10-3*95</item>
        <item>其他&#160;&#160;&#160;&#160;&#160;&#160;ZB-YJV32-Z-10-3*120</item>
        <item>其他&#160;&#160;&#160;&#160;&#160;&#160;ZB-YJV32-Z-10-3*150</item>
        <item>其他&#160;&#160;&#160;&#160;&#160;&#160;ZB-YJV32-Z-10-3*185</item>
        <item>其他&#160;&#160;&#160;&#160;&#160;&#160;ZB-YJV32-Z-10-3*240</item>
        <item>其他&#160;&#160;&#160;&#160;&#160;&#160;ZB-YJV32-Z-10-3*300</item>
        <item>其他&#160;&#160;&#160;&#160;&#160;&#160;ZB-YJV32-Z-10-3*400</item>
        <item>其他&#160;&#160;&#160;&#160;&#160;&#160;ZB-YJV32-Z-10-3*500</item>
    </string-array>
    <string-array name="ld_model">
        <item>LJ-35&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LJ-50&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LJ-70&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LJ-95&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LJ-120&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LJ-150&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LJ-185&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LJ-240&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LJ-300&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LJ-400&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LJ-500&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LGJ-35&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LGJ-50&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LGJ-70&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LGJ-95&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LGJ-120&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LGJ-150&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LGJ-185&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LGJ-240&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LGJ-300&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LGJ-400&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
        <item>LGJ-500&#160;&#160;&#160;&#160;&#160;&#160;裸导线</item>
    </string-array>
    <string-array name="jy_model">
        <item>JKLYJ-10/50&#160;&#160;&#160;&#160;&#160;&#160;绝缘铝导线</item>
        <item>JKLYJ-10/70&#160;&#160;&#160;&#160;&#160;&#160;绝缘铝导线</item>
        <item>JKLYJ-10/95&#160;&#160;&#160;&#160;&#160;&#160;绝缘铝导线</item>
        <item>JKLYJ-10/120&#160;&#160;&#160;&#160;&#160;&#160;绝缘铝导线</item>
        <item>JKLYJ-10/150&#160;&#160;&#160;&#160;&#160;&#160;绝缘铝导线</item>
        <item>JKLYJ-10/185&#160;&#160;&#160;&#160;&#160;&#160;绝缘铝导线</item>
        <item>JKLYJ-10/240&#160;&#160;&#160;&#160;&#160;&#160;绝缘铝导线</item>
        <item>JKLYJ-10/300&#160;&#160;&#160;&#160;&#160;&#160;绝缘铝导线</item>
        <item>JKLYJ-10/400&#160;&#160;&#160;&#160;&#160;&#160;绝缘铝导线</item>
        <item>JKLYJ-10/500&#160;&#160;&#160;&#160;&#160;&#160;绝缘铝导线</item>
        <item>JKLYJ-35&#160;&#160;&#160;&#160;&#160;&#160;绝缘铝导线</item>
        <item>JKYJ-10/50&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKYJ-10/70&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKYJ-10/95&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKYJ-10/120&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKYJ-10/185&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKYJ-10/240&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKYJ-10/300&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKYJ-10/400&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKYJ-10/500&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKLGYJ-10/50&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKLGYJ-10/70&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKLGYJ-10/95&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKLGYJ-10/120&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKLGYJ-10/185&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKLGYJ-10/240&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKLGYJ-10/300&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKLGYJ-10/400&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKLGYJ-10/500&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
        <item>JKLGYJ-35&#160;&#160;&#160;&#160;&#160;&#160;绝缘导线</item>
    </string-array>
    <string-array name="defect_type_pdxb">
        <item>基础</item>
        <item>其他</item>
        <item>照明</item>
    </string-array>
    <string-array name="defect_type_kg">
        <item>标识</item>
        <item>风机</item>
        <item>基础</item>
        <item>门窗</item>
        <item>其他</item>
        <item>照明</item>
    </string-array>
    <string name="detail">详情</string>
    <string name="point_on_map">地图上的点</string>
    <string name="data_finding">正在获取数据&#8230;</string>
</resources>