<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/searchbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/searchEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="1dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/search_back"
            android:singleLine="true"
            android:hint="@string/search_fragment_hint"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <ImageButton
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/button_selector_fragment_search" />
    </LinearLayout>

    <ListView
        android:id="@+id/resultListView"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_below="@id/searchbar"
        android:layout_above="@+id/detialBar"
        android:divider="@null"
        android:dividerHeight="15dp"
        android:scrollbars="none" 
        android:background="@null">
    </ListView>

    <LinearLayout
        android:id="@+id/detialBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/match_result_count" 
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/matchCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero" 
            android:textSize="17sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/current_page" 
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/currentPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero" 
            android:textSize="17sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/total" 
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/pageCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero" 
            android:textSize="17sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page" 
            android:textSize="15sp"/>
    </LinearLayout>

</RelativeLayout>