<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/interestPointArea"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="3dp" 
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_on_map"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/place"
            android:text="@string/data_finding"
            android:textColor="@color/gray_light"
            android:textSize="13sp" />

        <com.wzkcy.locationname.controller.ImageTextButton
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/nearby"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:src="@drawable/poilocation_detail"
            android:text="@string/detail"
            android:textColor="@color/blue"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="巡检" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>