<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_menu"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="10dp" >

    <ImageView
        android:id="@+id/menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/menu_title"/>

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/user_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/photo02"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:id="@+id/sunshineLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/user_photo"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/user_photo"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/sunshineView"
                android:layout_width="35dip"
                android:layout_height="35dip"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/sunshine"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/user_photo"
            android:layout_below="@id/sunshineLayout"
            android:layout_marginLeft="8dip"
            android:layout_toRightOf="@id/user_photo"
            android:paddingTop="10dip"
            android:text="@string/name"
            android:textColor="@color/gray_white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/location_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_title"
        android:layout_marginTop="4dp"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_menu_item_small"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_menu_item_n"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="经度"
                android:textColor="@color/custom_bule"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="未知"
                android:textColor="@color/custom_bule"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/bg_menu_item_n"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="纬度"
                android:textColor="@color/custom_bule"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="未知"
                android:textColor="@color/custom_bule"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/menu_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutbtn"
        android:layout_below="@id/location_info"
        android:cacheColorHint="@color/transparent"
        android:childIndicator="@null"
        android:groupIndicator="@null"
        android:childDivider="@drawable/divider_nocolor"
        android:dividerHeight="5dp"
        android:scrollbars="none" >
    </ExpandableListView>

    <LinearLayout
        android:id="@+id/layoutbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:paddingBottom="20dp"
        android:visibility="gone" >

        <Button
            android:id="@+id/cacheClearBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_cache"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>